--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "agility-angular-blog",
-  "version": "0.0.0",
+  "name": "agilitycms-angular-starter",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -21,6 +21,11 @@
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
+    "@fortawesome/angular-fontawesome": "^0.8.0",
+    "@fortawesome/fontawesome-common-types": "^0.2.35",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "js-htmlencode": "^0.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
