--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "agility-angular-blog": {
+    "agilitycms-angular-starter": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/agility-angular-blog",
+            "outputPath": "dist/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -42,6 +42,7 @@
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
+              "aot": true,
               "buildOptimizer": true,
               "budgets": [
                 {
@@ -62,18 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "agility-angular-blog:build"
+            "browserTarget": "agilitycms-angular-starter:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "agility-angular-blog:build:production"
+              "browserTarget": "agilitycms-angular-starter:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "agility-angular-blog:build"
+            "browserTarget": "agilitycms-angular-starter:build"
           }
         },
         "test": {
@@ -103,16 +104,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "agility-angular-blog:serve"
+            "devServerTarget": "agilitycms-angular-starter:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "agility-angular-blog:serve:production"
+              "devServerTarget": "agilitycms-angular-starter:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "agility-angular-blog"
+  "defaultProject": "agilitycms-angular-starter"
 }
