--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "assets": ["src/_redirects", "src/favicon.ico", "src/assets"],
+            "assets": ["src/_redirects", "src/favicon.png", "src/assets"],
             "styles": ["src/styles.css"],
             "scripts": [],
             "vendorChunk": true,
