--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "express": "^4.18.2",
     "js-htmlencode": "^0.3.0",
+    "ngx-cookie-service": "^18.0.0",
     "node-fetch": "^3.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
