--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "agilitycms-angular-starter-ssr",
+  "name": "agilitycms",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr": "node dist/agilitycms-angular-starter-ssr/server/server.mjs",
-    "prebuild:prerender": "ts-node -r tsconfig-paths/register prerender-routes.ts",
-    "build:prerender": "npm run prebuild:prerender && ng run agilitycms-angular-starter-ssr:prerender"
+    "prerender:routes": "ts-node --transpile-only prerender-routes.js",
+    "dev": "ng serve --port 4200",
+    "build": "npm run prerender:routes && ng build --configuration=production",
+    "start": "node dist/agilitycms/server/server.mjs", 
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -44,7 +41,7 @@
     "@angular/compiler-cli": "^18.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
+    "@types/node": "^18.19.63",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
