--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "agilitycms",
   "version": "0.0.0",
   "scripts": {
-    "prerender:routes": "ts-node --transpile-only prerender-routes.js",
+    "prerender:routes": "ts-node --transpile-only prerender-routes.ts",
     "dev": "ng serve --port 4200",
     "build": "npm run prerender:routes && ng build --configuration=production",
     "start": "ng serve --configuration production",
