--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # env files
-/src/environments/environment.prod.ts 
-/src/environments/environment.ts
+# /src/environments/environment.prod.ts 
+# /src/environments/environment.ts
 
 # compiled output
 /dist
