--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "ng test",
     "dev": "ng serve",
     "watch": "ng build --watch --configuration development",
-    "build": "npm run prerender:routes && ng build --configuration development",
+    "build": "npm run prerender:routes && ng build",
     "start": "ng serve",
     "build:prod": "npm run prerender:routes && ng build --configuration production",
     "start:prod": "ng serve --configuration production",
