--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "test": "ng test",
     "dev": "ng serve",
     "watch": "ng build --watch --configuration development",
-    "build": "npm run prerender:routes && ng build --configuration production",
+    "build": "npm run prerender:routesjs && ng build --configuration production",
     "start": "ng serve --configuration production",
-    "prerender:routes": "ts-node --transpile-only prerender-routes.ts"
+    "prerender:routes": "ts-node --transpile-only prerender-routes.ts",
+    "prerender:routesjs": "tsc prerender-routes.ts && node prerender-routes.js"
   },
   "private": true,
   "dependencies": {
