--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # env files
-# /src/environments/environment.prod.ts 
-# /src/environments/environment.ts
+/src/environments/environment.prod.ts 
+/src/environments/environment.ts
 
 # compiled output
 /dist
 /tmp
 /out-tsc
 /.angular
-# Only exists if Bazel was run
 /bazel-out
+prerender-routes.js
 
 # dependencies
 /node_modules
