--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "scripts": {
     "ng": "ng",
     "test": "ng test",
-    "dev": "ng serve",
-    "watch": "ng build --watch --configuration development",
-    "build": "npm run prerender:routesjs && ng build --configuration production",
+    "envinit": "node dotenv.config.js",
+    "dev": "npm run envinit && ng serve",
+    "build": "npm run envinit && npm run prerender:routes && ng build --configuration production",
     "start": "ng serve --configuration production",
-    "prerender:routes": "ts-node --transpile-only prerender-routes.ts",
-    "prerender:routesjs": "tsc prerender-routes.ts && node prerender-routes.js"
+    "prerender:routes": "tsc prerender-routes.ts && node prerender-routes.js"
   },
   "private": true,
   "dependencies": {
