--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@tailwindcss/typography": "^0.5.15",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "js-htmlencode": "^0.3.0",
     "ngx-cookie-service": "^18.0.0",
