--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # env files
-# /src/environments/environment.prod.ts 
-# /src/environments/environment.ts
+# ignore the changes locally
+/src/environments/environment.prod.ts 
+/src/environments/environment.ts
 
 # compiled output
 /dist
