--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# env files
-# ignore the changes locally
-/src/environments/environment.prod.ts 
-/src/environments/environment.ts
-
 # compiled output
 /dist
 /tmp
@@ -12,6 +7,9 @@
 /.angular
 /bazel-out
 prerender-routes.js
+/src/environments/environment.prod.ts
+/src/environments/environment.ts
+/src/environments
 
 # dependencies
 /node_modules
