Preloaded and Angular Routed
This is a solution to using the Angular Router to avoid client side requests

--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,22 @@
 /out-tsc
 /.angular
 /bazel-out
-prerender-routes.js
+
+# environment files
 /src/environments/environment.prod.ts
 /src/environments/environment.ts
 /src/environments
 content.json
 pages.json
 agility-routes.txt
+
+#agility prerendering
+prerender-routes.js
+prerender-pages.js
+prerender-content.js
+agility-routes.txt
+pages.json
+content.json
 
 # dependencies
 /node_modules
