Improvements to document rendering, less flicker

--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,10 @@
             },
             "ssr": {
               "entry": "server.ts"
-            }
+            },
+            "allowedCommonJsDependencies": [
+              "dotenv"
+            ]
           },
           "configurations": {
             "production": {
